# trellis2.c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zh.md  THIRD_PARTY_NOTICES.md
docs/: architecture.md  operator-map.md  sparse-conv-next-steps.md  vkmesh-optimization.md
include/: trellis.h  trellis_flow_sampler.h  trellis_ggml_layers.h  trellis_platform.h
licenses/: O-Voxel-LICENSE.txt  xatlas-embedded-LICENSES.txt
models/pixal3d/: model.json
models/segvigen/: model.json
models/tokenskin/: model.json
models/trellis2/: model.json
src/: trellis_backend.c  trellis_cuda_inference.cu  trellis_decoder.c  trellis_dino.c  trellis_flex_dual_grid.c  trellis_flow_model.c  trellis_ops.c  trellis_pipeline.c  trellis_safetensors.c  trellis_shape_decoder.c  trellis_sparse.c  trellis_stage1.c  trellis_weights.c
src/architectures/dit_flow/: dit_flow_executor.c  dit_flow_executor.h
src/architectures/sparse_unet_decoder/: executor.c
src/architectures/sparse_unet_encoder/: executor.c  s2c_host.c  s2c_host.h  weights.c
src/architectures/tokenskin/: attention.c  fsq_cvae.c  mesh_encoder.c  qwen3.c  tokenskin.h  weights.c
src/custom_ops/: trellis_cuda_ops.cu  trellis_cuda_ops.h
src/export/: trellis_gltf_bake.comp  trellis_gltf_export.c
src/io/: trellis_safetensors.c  trellis_weights.c
src/model/: trellis_birefnet.c  trellis_cuda_forward.cu  trellis_cuda_kernels.cu  trellis_cuda_kernels.h  trellis_dino.c  trellis_ggml_layers.c  trellis_slat_flow_model.c  trellis_sparse_structure_decoder.c
src/ops/ggml/: ggml_layers.c
src/ops/mesh/: flex_dual_grid.c  mesh_to_flexible_dual_grid.cpp
src/ops/projection/: pixal_projection.c  pixal_projection.h
src/ops/sparse/: trellis_sparse_vulkan.c
src/pipeline/: trellis_dit_flow_executor.c  trellis_dit_flow_executor.h  trellis_pipeline.c  trellis_pipeline_internal.h  trellis_sparse_structure_pipeline.c  trellis_structured_latent_pipeline.c
src/runtime/: trellis_model_package.c  trellis_registry.c  trellis_runtime.c
src/tasks/image_to_3d/: adapter.c  adapter.h  component_status.c  gltf_axes.h  image_prepare.c  image_to_3d.c  image_to_3d_internal.h  mesh_postprocess.c  model_cache.c  shape_latent_cache.c
src/tasks/mesh_rigging/: generation.c  generation.h  gltf_io.c  gltf_io.h  interpolate.c  interpolate.h  mesh_rigging_internal.h  model.c  pipeline.c  preprocess.c  preprocess.h  rigged_gltf.c  rigged_gltf.h  sampler.c  sampler.h  source_appearance.c  source_appearance.h  tokenizer.c  tokenizer.h  tokenskin_features.c  tokenskin_features.h
src/tasks/mesh_segmentation/: condition_render.c  (+11 more)
tests/: run_image_to_3d_functional.py  test_attention_policy.c  test_convert_segvigen_fixture.py  test_convert_segvigen_weights.py  test_convert_tokenskin_weights.py  test_download_weights.py  test_ggml_backend_ops.c  test_gltf_axes.c  test_image_prepare.c  test_image_to_3d_adapter.c  test_mesh_condition_render.c  test_mesh_material_features.c  test_mesh_partitioner.c  test_mesh_parts_glb.c  test_mesh_segmentation_e2e.py  test_mesh_segmentation_labels.c  test_mesh_segmentation_normalization.c  test_mesh_to_flexible_dual_grid.c  test_model_cli_split.py  test_model_package.c  test_model_registry.c  test_pixal_condition.c  test_runtime_init.c  test_shape_latent_cache.c  test_sparse_encoder_backend.c  test_structured_latent_pairing.c  test_tokenskin_features.c  test_tokenskin_interpolate.c  test_tokenskin_preprocess.c  test_tokenskin_rigged_gltf.c  test_tokenskin_sampler.c  test_tokenskin_tokenizer.c  test_trellis.c  test_vkmesh.c
tools/: README.md  convert_segvigen_fixture.py  convert_segvigen_weights.py  convert_tokenskin_weights.py  download_weights.py  image_to_gltf_cli.c  image_to_gltf_cli.h  package_linux_release.sh  package_windows_release.ps1  pixal3d_image_to_gltf.c  tokenskin_rig.c  trellis2_image_to_gltf.c  trellis2_segment_mesh.c  trellis2_texture_mesh.c  trellis_birefnet_rgba.c  trellis_image_to_gltf.c  trellis_image_to_obj.c  trellis_infer.c  trellis_info.c  trellis_live.c  trellis_mesh_viewer.c  trellis_stage1.c  trellis_stage2.c  trellis_stage2_mesh_live_viewer.c  trellis_tool_cli.c  trellis_tool_cli.h  trellis_tool_live.h  trellis_tool_model.c  trellis_tool_model.h  trellis_viewer.c  trellis_voxel_viewer.c  vkmesh.c
tools/debug/: trellis_checkpoint_validate.c  trellis_checkpoint_validate.h  trellis_infer.c  trellis_sparse_reference.c  trellis_sparse_reference.h  trellis_sparse_structure.c  trellis_structured_latent.c  trellis_verify.c
tools/viewers/: trellis_live.c  trellis_mesh_viewer.c  trellis_structured_latent_mesh_live_viewer.c  trellis_voxel_viewer.c
tools/vkmesh/: README.md  meshbin_validate.py  trellis_gltf_export.c  vkmesh.c
(+55 files in other folders)
